k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
  namespace: "test-namespace"
  labels:
    app: test
    app.kubernetes.io/name: testapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: testapp
        image: ayatachibana/test:0.0.24
        ports:
          - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /check
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 3
          timeoutSeconds: 5
        #livenessProbe:
        #  tcpSocket:
        #    port: 8080
  strategy:
    type: RollingUpdate
