k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: producer-service
  namespace: "producer-namespace"
spec:
  #How is the connection between service to pod and external
  #ClusterIP: Only internal
  #Nodeport: accessible externally with the nodePort
  #LoadBalancer: utilizes an external load balancer
  type: NodePort
  selector:
    #Choose which pods will send the traffic to
    #In this case, bods in which the label app is test-application
    app: producer-application
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30000
